[package]
name = "example_tskit_rust_simulations"
version = "0.1.0"
authors = ["molpopogen <krthornt@uci.edu>"]
edition = "2018"

[[bin]]
name = "overlapping_generations"
path = "src/bin/overlapping_generations.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
tskit = { version = "=0.3.0", features = ["provenance"] }
rand = "0.8.3"
rand_distr = "0.4.0"
